--- a/CollegeManagement-Django/main_app/templates/student_template/home_content.html
+++ b/CollegeManagement-Django/main_app/templates/student_template/home_content.html
@@ -211,7 +211,7 @@ var barChart = new Chart(barChartCanvas, {
             // Your web app's Firebase configuration
             // For Firebase JS SDK v7.20.0 and later, measurementId is optional
             var firebaseConfig = {
-                apiKey: "AIzaSyBarDWWHTfTMSrtc5Lj3Cdw5dEvjAkFwtM",
+                apiKey: os.getenv('API_KEY'),
                 authDomain: "sms-with-django.firebaseapp.com",
                 databaseURL: "https://sms-with-django.firebaseio.com",
                 projectId: "sms-with-django",
