made some updates

--- a/CollegeManagement-Django/main_app/templates/main_app/login.html
+++ b/CollegeManagement-Django/main_app/templates/main_app/login.html
@@ -25,7 +25,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href=""><b>Chuka Management System</b> </a>
+            <a href=""><b>College Management System</b> </a>
 
         </div>
         <!-- /.login-logo -->
