--- a/CollegeManagement-Django/main_app/templates/main_app/sidebar_template.html
+++ b/CollegeManagement-Django/main_app/templates/main_app/sidebar_template.html
@@ -289,7 +289,7 @@
                         class="nav-link  {% if view_student_leave == request.path %} active {% endif %}">
                         <i class="nav-icon fas fa-check-double"></i>
                         <p>
-                            Student Leave
+                            Student Deferrement
 
                         </p>
                     </a>
